--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -22,7 +22,7 @@
         <div id="header-row">
             <div id="logo">
                 <a href="<%- url_for() %>">
-                    <img src="<%= url_for(theme.logo) %>" alt="logo">
+                    <img src="<%= url_for(theme.logo) %>" alt="logo" width="130px" height="130px">
                 </a>
             </div>
             <div class="header-info">
