--- a/source/css/_partial/reward.styl
+++ b/source/css/_partial/reward.styl
@@ -36,12 +36,11 @@
     right: 0
 
 .reward-lay
-  width: 360px
+  margin: 20px 0
 
 .reward-content
   margin: 20px 0
   .reward-code
-    width: 200px
     margin: 0 auto
   .reward-select
     width: 100%
