--- a/layout/_partial/post/reward.ejs
+++ b/layout/_partial/post/reward.ejs
@@ -16,7 +16,7 @@
             var alipay = theme.reward.alipay;
         %>
         <div class="reward-code">
-            <img id="rewardCode" src="<%- url_for(wechat) %>" alt="打赏二维码">
+            <img id="rewardCode" src="<%- url_for(wechat) %>" alt="打赏二维码" width="300" height="300">
         </div>
         <div class="reward-select">
             <% if(wechat) {%>
