--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,15 +1,15 @@
 <% if (post.link){ %>
   <h1 itemprop="name">
-    <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title %></a>
+    <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><span class="article-type <%- ((post.original && post.original.title) ? 'type-reprint' : 'type-original') %>"><%- ((post.original && post.original.title) ? '转' : '原') %></span><%= post.title %></a>
   </h1>
 <% } else if (post.title){ %>
   <% if (index){ %>
     <h1 itemprop="name">
-      <a class="<%= class_name %>" href="<%- url_for(post.path) %>" <% if (theme.open_new_link) {%> target="_blank" <% } %> ><%= post.title %></a>
+      <a class="<%= class_name %>" href="<%- url_for(post.path) %>" <% if (theme.open_new_link) {%> target="_blank" <% } %> ><span class="article-type <%- ((post.original && post.original.title) ? 'type-reprint' : 'type-original') %>"><%- ((post.original && post.original.title) ? '转' : '原') %></span><%= post.title %></a>
     </h1>
   <% } else { %>
     <h1 class="post-title" itemprop="name">
-      <%= post.title %>
+      <span class="article-type <%- ((post.original && post.original.title) ? 'type-reprint' : 'type-original') %>"><%- ((post.original && post.original.title) ? '转' : '原') %></span><%= post.title %>
     </h1>
     <div class="post-title-bar">
       <ul>
@@ -30,5 +30,6 @@
         </li>
       </ul>
     </div>
+    <%- partial('copyright') %>
   <% } %>
 <% } %>
