--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -10,16 +10,16 @@ $block-caption
   font-weight: bold
 
 $block
-  background: #fff
+  // background: #fff
   box-shadow: 1px 2px 3px #ddd
   border: 1px solid color-border
-  border-radius: 3px
+  border-radius: border-radius
 
 $base-style
   h1
-    font-size: 3rem
+    font-size: 2.5rem
   h2
-    font-size: 2.8rem
+    font-size: 2rem
   h3
     font-size: 1.5rem
   h4
