--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -3,8 +3,8 @@
   min-height: calc(100vh - 530px)
 .article
   margin: block-margin 0
-  background: #fff
-  border-radius: 0
+  // background: #fff
+  border-radius: border-radius
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
 
 .article-inner
@@ -46,6 +46,32 @@
     color: main-color
     padding-left: 8px
 
+span.article-type
+    display: inline-block
+    padding: 2px
+    margin: 3px
+    height: line-height-title
+    line-height: line-height-title
+    text-align: center
+    vertical-align: middle
+    font-size: 75%
+    border-radius: 50%
+
+span.article-type.type-original
+    color: #ca0c16
+    border: 1px solid #ffa39e
+    background: #ffa39e4f
+
+span.article-type.type-reprint
+    color: #009003
+    border: 1px solid #b7eb8f
+    background: #b7eb8f4f
+
+span.article-type.type-revise
+    color: #00aaaa
+    border: 1px solid #04d8d8
+    background: #04d8d84f
+
 .article-header .header-cate
   background: main-color
   position: absolute
@@ -72,7 +98,7 @@
   clearfix()
   position: relative
   padding: 15px
-  background: #f9f9f9
+  background: rgba(0,0,0,0.1)
   border-top: 1px solid #e8e8e8
   border-bottom: 1px solid #e8e8e8
   color: color-default
@@ -114,7 +140,7 @@
     border-spacing: 0
     border: 1px solid #ddd
     thead th
-      background: #f1f1f1
+      background: rgba(#f1f1f1, 0.5)
       text-align: center
       border: 1px solid #ddd
       padding: 15px 0
@@ -132,7 +158,7 @@
     padding: 1px 20px
     border-left: 4px solid main-color
     color: #6e6e6e
-    background: #f5f5f5
+    background: rgba(#f5f5f5, 0.5)
     font-size: 14px
     border-radius: 0 2px 2px 0
     margin: 10px 0
@@ -177,6 +203,7 @@
     float: left
     width: 300px
     height: 150px
+    border-radius: 0.5em
     overflow: hidden
     a
       cursor: pointer
@@ -195,6 +222,11 @@
         -o-transform: scale(1.5)
   .article-feed
     margin-left: 320px
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical
+    overflow: hidden
+    text-overflow: ellipsis
   .article-tags
     position: absolute
     left: 315px
@@ -216,7 +248,7 @@
   float: right
   padding: 8px 20px
   border: 0
-  border-radius: 0
+  border-radius: 0.5em
   background: main-color
   box-shadow: 0 3px 10px rgba(0,0,0,0.06), 0 3px 10px rgba(0,0,0,0.13)
   transition: all .1s
@@ -458,7 +490,7 @@ $article-share-link
 .post-toc-pos
   z-index: 999
   bottom: 77%
-  left: calc(50% - 660px)
+  left: calc(50% - 780px)
   position: fixed
   .post-article
     float: left
@@ -478,13 +510,15 @@ $article-share-link
 .post-toc-wrap
   position: fixed
   border-radius: 3px
-  width: 200px
+  max-width: 300px
   max-height: 400px
   color: #313131
-  &.fixed
-    top: 20px
-    bottom: 140px
-    overflow-y: auto
+  // &.fixed
+  //   top: 20px
+  //   bottom: 140px
+  //   overflow-y: auto
+  // &.absolute
+  //   right: 100%
   ol, ul
     list-style: none
     margin: 0
@@ -529,7 +563,7 @@ $article-share-link
   padding: 3px 10px
   line-height: 1.5rem
   color: inherit
-  word-break: break-all
+  word-break: normal
   text-decoration: none
   &:hover
     opacity: .8
@@ -543,16 +577,18 @@ $article-share-link
     right: 0
     width: 100%
     height: 100%
+  &:active
+    font-weight: bold
+    color: main-color
 
 .post-copyright
-  margin: 30px 0
   font-size: 14px
   .content
     margin-bottom: 1em
     padding: 10px 0 30px 20px
     word-break: break-all
     color: #727272
-    background: lighten( main-color, 95%)
+    background: rgba(lighten( main-color, 95%), 0.5)
     border-radius: 10px
     p
       font-size: 14px
@@ -561,13 +597,13 @@ $article-share-link
     float: right
     a
       position: relative
-      display: block
+      display: inline-block
       overflow: hidden
       padding: 0 16px 0 35px
       height: 28px
       line-height: 28px
       color: #727272
-      background: lighten( main-color, 95%)
+      background: rgba(lighten( main-color, 95%), 0.4)
       border-radius: 14px
       &:hover
         text-decoration: none
@@ -578,3 +614,8 @@ $article-share-link
       width: 28px
       height: 28px
       border-radius: 50%
+
+video::cue
+    background-color: rgba(0, 0, 0, 0.2);
+    font-size:20px
+    line-height: 100%
