--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -18,11 +18,30 @@
       &:hover
         color: main-color
 .post-content
-  background: #fff
+  background: rgba(255, 255,255,0.5)
+  &:before
+    content: '';
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: inherit;
+    background-attachment: fixed;
+    filter: blur(4px);
+  &:after
+    content: "";
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.25);
+
 .post-modal
   display: none
   position: fixed
-  top: 24%
+  top: 0%
   left: 50%
   z-index: 120
   padding: 30px
