--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -148,21 +148,24 @@ else
   z-index: 998
   width: 400px
   padding: 30px
-  background: #fff
+  background: rgba(255,255,255,0.5)
   opacity: 0
   box-shadow: 5px 5px 10px rgba(0,0,0,.3)
   transition: all .5s
+  border-radius: 1em
   .search-field
     padding: 10px
     width: 360px
     border: 0
+    border-radius: 1em
     color: #666
     font-weight: normal
-    background: #f1f1f1
+    background: rgba(240,240,240,0.6)
     transition: background .3s
   .search-field
     &:focus
-      background: #e8e8e8
+      background: rgba(230,230,230,0.6)
+      border-radius: 1em
   #search-submit
     color: main-color
     width: 33px
@@ -182,15 +185,17 @@ else
     top: 0
     right: 0
     display: block
-    padding: 1px 10px
+    border-radius: 1em
+    padding: 1px 5px
     font-size: 20px
-    background: #e8e8e8
+    background: rgba(230,230,230,0)
     color: #666
     cursor: pointer
   .search-close
     &:hover
-      background: main-color
-      color: #fff
+      // background: main-color
+      color: main-color
+      transform: scale(1.5)
 .search-container
   position: absolute
   left: 6.6%
@@ -199,7 +204,7 @@ else
   width: 380px
   max-height: 215px
   overflow-y: auto
-  background: #fff
+  background: #fffb
   border-radius: 2px
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
   opacity: 0
