--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -52,6 +52,8 @@ main-column = 9
 sidebar-column = 3
 box-shadow = 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12)
 
+border-radius = 1em
+
 if sidebar and sidebar isnt bottom
   _sidebar-column = sidebar-column
 else
