--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -162,7 +162,10 @@ else
     font-weight: normal
     background: rgba(240,240,240,0.6)
     transition: background .3s
+    outline: none
   .search-field
+    &:hover
+      box-shadow: 0 5px 10px rgba(0,0,0,0.2), 0 -5px 10px rgba(0,0,0,0.2)
     &:focus
       background: rgba(230,230,230,0.6)
       border-radius: 1em
