--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -22,7 +22,7 @@ color-pinterest = #cb2027
 color-google = #dd4b39
 
 // Fonts
-font-family = "Helvetica Neue", Helvetica, STHeiTi, Arial, sans-serif
+font-family = "Helvetica Neue", Helvetica, FangSong, STFangsong, Arial, sans-serif
 font-sans = "Helvetica Neue", Helvetica, Arial, sans-serif
 font-serif = Georgia, "Times New Roman", serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
