--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -31,7 +31,7 @@
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
-  <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
   <link rel="stylesheet" href="<%- theme.style.math.katex.cdn %>" type="text/css">
   <%- css('css/style') %>
   <%- js('js/pace.min') %>
