--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -130,9 +130,9 @@ else
     height: 21px
     line-height: 21px
     float: left
-    padding: 0 5px 0 10px
+    padding: 0 0.5em
     position: relative
-    border-radius: 5px
+    border-radius: 1em
     margin: 5px 15px 5px 8px
     &:hover
       opacity: 0.8
@@ -147,19 +147,20 @@ else
   margin-left: -240px
   z-index: 998
   width: 400px
-  padding: 30px
+  padding: 1em
   background: rgba(255,255,255,0.5)
   opacity: 0
   box-shadow: 5px 5px 10px rgba(0,0,0,.3)
   transition: all .5s
   border-radius: 1em
   .search-field
-    padding: 10px
-    width: 360px
+    padding: 0.5em
+    width: -webkit-fill-available
     border: 0
     border-radius: 1em
     color: #666
     font-weight: normal
+    font-size: 1.5em
     background: rgba(240,240,240,0.6)
     transition: background .3s
     outline: none
@@ -169,6 +170,7 @@ else
     &:focus
       background: rgba(230,230,230,0.6)
       border-radius: 1em
+      box-shadow: 0 5px 10px rgba(0,0,0,0.2), 0 -5px 10px rgba(0,0,0,0.2)
   #search-submit
     color: main-color
     width: 33px
@@ -201,21 +203,23 @@ else
       transform: scale(1.5)
 .search-container
   position: absolute
-  left: 6.6%
-  top: 71%
+  // left: 0%
+  top: 90%
   z-index: 999
-  width: 380px
+  width: inherit
   max-height: 215px
   overflow-y: auto
   background: #fffb
   border-radius: 2px
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
+  // box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)
   opacity: 0
   visibility: hidden
   -webkit-transform: translateY(-50%) scale(.5)
   transform: translateY(-50%) scale(.5)
   -webkit-transition: .3s ease-in
   transition: .3s ease-in
+  border-radius: 1.5em
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2), 0 -5px 10px rgba(0,0,0,0.2)
 .search-container-show
   opacity: 1
   visibility: visible
@@ -226,13 +230,18 @@ else
   padding: 0
   .search-result-item
     line-height: 1.6em
-    padding: 10px
     border-bottom: 1px solid #dadada
     @extend $ellipsis
+    &:hover
+        background: rgba(230,230,230,0.6)
     .search-item-li
       color: main-color
       text-decoration: none
       font-size: 16px
+      padding: 0.5em
+      width: 100%
+      height: 100%
+      display: inline-table
   .search-result-item-tips
     padding: 10px
     line-height: 1.6em
