--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -22,13 +22,13 @@ color-pinterest = #cb2027
 color-google = #dd4b39
 
 // Fonts
-font-family = "Helvetica Neue", Helvetica, FangSong, STFangsong, Arial, sans-serif
-font-sans = "Helvetica Neue", Helvetica, Arial, sans-serif
-font-serif = Georgia, "Times New Roman", serif
-font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
-font-icon = FontAwesome
-font-icon-path = "fonts/fontawesome-webfont"
-font-icon-version = "4.0.3"
+font-family = FiraCodeNerdFont, "Helvetica Neue", Helvetica, FangSong, STFangsong, Arial, sans-serif
+font-sans = FiraCodeNerdFont, "Helvetica Neue", Helvetica, Arial, sans-serif
+font-serif = FiraCodeNerdFont, Georgia, "Times New Roman", serif
+font-mono = FiraCodeNerdFont, Consolas, Monaco, Menlo, Consolas, monospace
+font-icon = FiraCodeNerdFont
+font-path = "fonts"
+font-version = "2.1"
 font-size = 14px
 line-height = 1.6em
 line-height-margin = 0.8em
