--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -12,14 +12,10 @@ input, button
     padding: 0
 
 @font-face
-  font-family: FontAwesome
-  font-style: normal
-  font-weight: normal
-  src: url(font-icon-path + ".eot?v=#" + font-icon-version)
-  src: url(font-icon-path + ".eot?#iefix&v=#" + font-icon-version) format("embedded-opentype"),
-       url(font-icon-path + ".woff?v=#" + font-icon-version) format("woff"),
-       url(font-icon-path + ".ttf?v=#" + font-icon-version) format("truetype"),
-       url(font-icon-path + ".svg#fontawesomeregular?v=#" + font-icon-version) format("svg")
+  font-family: "FiraCodeNerdFont"
+  // font-style: normal italic
+  // font-weight: normal
+  src: url(font-path + "FiraCode/FiraCodeRegularNerdFontComplete.woff2")
 
 html, body, #container
   height: 100%
