修复图标异常

--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -4,9 +4,9 @@
             <i class="icon icon-lg icon-chevron-left"></i>
         </a>
         <input class="search-field" placeholder="Search..." id="keywords">
-        <a id="search-submit" href="javascript:;">
+        <!-- <a id="search-submit" href="javascript:;">
             <i class="fa fa-search"></i>
-        </a>
+        </a> -->
     <div class="search-container" id="search-container">
         <ul class="search-result" id="search-result">
         </ul>
